# rustvacation

./: Cargo.toml  README.md
src/: hello.rs  main.rs
